Adicionada responsividade para dispositivos pequenos

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -101,15 +101,12 @@ nav {
   background: $secondary;
   display: grid;
   grid-template-columns: repeat(6, 125px);
-  grid-gap: 15px;
+  gap: 15px;
   justify-content: center;
   align-items: center;
   height: 35vh;
-  overflow: hidden;
 
   .category {
-    border: 1px solid $black;
-    border-radius: 50%;
     width: 100px;
     height: 100px;
     cursor: pointer;
@@ -166,6 +163,8 @@ main {
     }
 
     .center-card {
+      display: flex;
+      align-items: center;
       width: 25%;
       margin: 250px 30px 0 0;
     }
@@ -207,11 +206,6 @@ main {
           margin-bottom: 10px;
         }
       }
-    }
-
-    .center-card {
-      display: flex;
-      align-items: center;
     }
   }
 }
@@ -481,5 +475,191 @@ footer {
     justify-content: center;
     color: $lighter-black;
     margin: 20px 0;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  nav {
+    overflow-x: hidden;
+    position: relative;
+    flex-direction: column;
+    height: 18vh;
+    border: none;
+
+    .logo {
+      padding: 0;
+
+      h1 {
+        font-size: 1.5rem;
+        margin-top: 10px;
+      }
+    }
+
+    .nav-main {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      max-width: 360px;
+      overflow-x: hidden;
+
+      li {
+        margin: 0px;
+        padding: 5px;
+        align-items: center;
+        font-size: 0.8rem;
+      }
+    }
+
+    .nav-right {
+      .icons-container {
+        span {
+          padding: 5px;
+
+          &:last-of-type {
+            margin-right: 0;
+          }
+        }
+      }
+    }
+  }
+
+  .banner {
+    height: 25vh;
+  }
+
+  .categories-container {
+    height: 45vh;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(2, 150px);
+    gap: 0px 15px;
+  }
+
+  main {
+    width: 100vw;
+    height: 100%;
+
+    .main-wrapper {
+      flex-direction: column;
+      max-height: 100%;
+
+      .card {
+        height: 100%;
+        padding-bottom: 10px;
+      }
+
+      .center-card {
+        width: 100%;
+        margin-top: 70px;
+        justify-content: center;
+      }
+
+      .side-cards {
+        flex-direction: column;
+        padding: 5px;
+        align-self: center;
+      }
+
+      .summary-container {
+        margin: 0;
+        width: 100%;
+        padding: 50px 30px;
+
+        p,
+        h1 {
+          width: 100%;
+        }
+
+        i {
+          font-size: 6rem;
+          bottom: -80px;
+          left: 20px;
+        }
+      }
+    }
+  }
+
+  .product-section {
+    overflow: hidden;
+    flex-direction: column;
+
+    width: 100vw;
+    height: auto;
+    padding: 0;
+    background: $secondary;
+
+    .product-container {
+      width: 100vw;
+      flex-direction: column;
+      align-items: center;
+
+      .product-image-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 30px 0 10px 0;
+        width: 350px;
+
+        img {
+          width: 350px;
+        }
+      }
+
+      .product-carousel {
+        width: 100vw;
+        padding: 20px;
+      }
+
+      .product-summary {
+        width: 100vw;
+        padding: 30px;
+        margin: 0;
+      }
+    }
+  }
+
+  .instagram-section {
+    height: 100%;
+
+    h1 {
+      margin: 20px 0 30px 0;
+    }
+
+    .instagram-images-container {
+      width: 100vw;
+      height: 100%;
+      flex-direction: column;
+      align-items: center;
+
+      .instagram-image-container {
+        width: 350px;
+      }
+
+      .center-image {
+        margin-top: 0;
+      }
+
+      img {
+        width: 350px;
+        height: 350px;
+      }
+    }
+  }
+
+  footer {
+    .menus-container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      .menu {
+        .input-wrapper {
+          width: 90vw;
+        }
+      }
+
+      h2 {
+        text-align: center;
+      }
+    }
   }
 }
